--- a/static/main/index.html
+++ b/static/main/index.html
@@ -9,5 +9,12 @@
 <body>
   <h1>MCEasyServer</h1>
   <hr />
+  <ul>
+    <li><a href="../run/index.html">Start Server</a></li>
+    <li><a href="../settings/index.html">Configure Server</a></li>
+    <li><a href="../worlds/index.html">Manage Worlds</a></li>
+    <li><a href="../plugins/index.html">Manage Plugins</a></li>
+    <li><a href="javascript: quitApp();">Save & Quit to Title</a></li>
+  </ul>
 </body>
 </html>
