--- a/static/main/index.html
+++ b/static/main/index.html
@@ -14,6 +14,7 @@
     <li><a href="../settings/index.html">Configure Server</a></li>
     <li><a href="../worlds/index.html">Manage Worlds</a></li>
     <li><a href="../plugins/index.html">Manage Plugins</a></li>
+    <li><a href="../update/index.html">Update Server</a></li>
     <li><a href="javascript: quitApp();">Save & Quit to Title</a></li>
   </ul>
 </body>
