Remove server log button + colors

--- a/static/run/index.html
+++ b/static/run/index.html
@@ -16,10 +16,7 @@
     </tr>
     <tr>
       <td id="server-command-container"><input type="text" id="server-command" placeholder="Type server commands here..." /></td>
-      <td>
-        <button onclick="openLog()" class="server-button">Open Server Log</button>
-        <button onclick="stopServer()" class="server-button">Stop Server</button>
-      </td>
+      <td id="server-button-container"><button id="server-button" onclick="stopServer()">Stop Server</button></td>
     </tr>
   </table>
 </body>
