Add sendCommand function

--- a/static/run/index.html
+++ b/static/run/index.html
@@ -11,8 +11,8 @@
   <hr />
   <table>
     <tr>
-      <td id="server-log-container"><textarea id="server-log"></textarea></td>
-      <td id="server-players-container"><textarea id="server-players"></textarea></td>
+      <td id="server-log-container"><textarea id="server-log" disabled></textarea></td>
+      <td id="server-players-container"><textarea id="server-players" disabled></textarea></td>
     </tr>
     <tr>
       <td id="server-command-container"><input type="text" id="server-command" placeholder="Type server commands here..." /></td>
