Add message about IP address

--- a/static/run/index.html
+++ b/static/run/index.html
@@ -9,6 +9,7 @@
 <body>
   <h1>MCEasyServer</h1>
   <hr />
+  <p id="local-text">sage</p>
   <table>
     <tr>
       <td id="server-log-container"><textarea id="server-log" disabled></textarea></td>
