--- a/static/settings/index.html
+++ b/static/settings/index.html
@@ -10,6 +10,10 @@
   <h1>MCEasyServer</h1>
   <p>Settings Menu</p>
   <hr />
+  <button class="settings-buttons" onclick="saveData()">Save & Return</button>
+  <button class="settings-buttons" onclick="location.href = __dirname + '/../main/index.html'">Don't Save and Return</button>
+  <br />
+  <br />
   <div id="options"></div>
 </body>
 </html>
