Add main menu text

--- a/static/main/index.html
+++ b/static/main/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <h1>MCEasyServer</h1>
+  <p>Main Menu</p>
   <hr />
   <ul>
     <li><a href="../run/index.html">Start Server</a></li>
