Add info + update package-lock.json

--- a/static/settings/index.html
+++ b/static/settings/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <h1>MCEasyServer</h1>
-  <p>Settings Menu</p>
+  <p>Configuration Menu</p>
   <hr />
   <button class="settings-buttons" onclick="saveData()">Save & Return</button>
   <button class="settings-buttons" onclick="location.href = __dirname + '/../main/index.html'">Don't Save and Return</button>
