Implement installation/updating mechanism

--- a/static/update/index.html
+++ b/static/update/index.html
@@ -9,6 +9,7 @@
 <body>
   <h1>MCEasyServer</h1>
   <hr />
+  <p id="update-text"></p>
   <textarea id="update-log" disabled></textarea>
 </body>
 </html>
