--- a/static/main/index.html
+++ b/static/main/index.html
@@ -15,7 +15,7 @@
     <li><a href="../settings/index.html">Configure Server</a></li>
     <li><a href="../worlds/index.html">Manage Worlds</a></li>
     <li><a href="../plugins/index.html">Manage Plugins</a></li>
-    <li><a href="../update/index.html">Update Server</a></li>
+    <li><a href="javascript: openUpdate();">Update Server</a></li>
     <li><a href="javascript: openDirectory();">Open Server Folder</a></li>
   </ul>
 </body>
