Add drawing + world removal mechanism

--- a/static/worlds/index.html
+++ b/static/worlds/index.html
@@ -8,13 +8,12 @@
 </head>
 <body>
   <h1>MCEasyServer</h1>
-  <p>Configuration Menu</p>
+  <p>World Menu</p>
   <hr />
   <button id="world-add-button" onclick="addWorld()">+</button>
   <br />
   <br />
   <div id="worlds"></div>
-  <br />
   <br />
   <p>&#9733; - Main World</p>
 </body>
