Implement world adding system + add link back to main page

--- a/static/worlds/index.html
+++ b/static/worlds/index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
   <h1>MCEasyServer</h1>
-  <p>World Menu</p>
+  <p>
+    World Menu
+    <a href="../main/index.html">Back to Main Menu</a>
+  </p>
   <hr />
   <button id="world-add-button" onclick="addWorld()">+</button>
   <br />
