--- a/static/eula/index.html
+++ b/static/eula/index.html
@@ -12,7 +12,7 @@
   <p>
     Welcome to MCEasyServer!<br /><br />
     In order to create your Minecraft server, you must first agree to the
-    <a href="">Minecraft End User License Agreement</a>.<br /><br />
+    <a href="javascript: openEULA()">Minecraft End User License Agreement</a>.<br /><br />
     <b>Do you agree to the Minecraft EULA?</b>
   </p>
   <button id="eula-agree-button" onclick="openInstall()">I Agree</button>
